---
title: codemelted JavaScript Module Hierarchy
---
classDiagram
  direction BT
  %%  Setup our codemelted namespace.
  namespace codemelted {
    class core {
      <<module>>
    }
    class disk {
      <<module>>
    }
    class hw {
      <<module>>
    }
    class storage {
      <<module>>
    }
    class ui {
      <<module>>
    }
    class db {
      <<module>>
    }
    class network {
      <<module>>
    }
  }

  %%  Model the codemelted module exports to the runtimes within the namespace
  db <-- core
  disk <-- core
  hw <-- core
  network <-- core
  storage <-- core
  ui <-- core

  %% Setup our supported runtimes
  class rte_browser {
    <<module>>
  }
  class rte_bun {
    <<module>>
  }
  class rte_deno {
    <<module>>
  }
  class rte_node {
    <<module>>
  }
  class rte_tauri {
    <<module>>
  }
  class rte_worker {
    <<module>>
  }

  %% Now model our runtime exports for what will be included by a consuming
  %% project
  rte_browser <-- disk
  rte_browser <-- hw
  rte_browser <-- ui
  rte_browser <-- storage
  rte_browser <-- db
  rte_browser <-- network

  rte_tauri <-- rte_browser

  rte_worker <-- db
  rte_worker <-- network

  rte_bun <-- core
  rte_deno <-- network
  rte_deno <-- storage
  rte_node <-- core

  note "Reflects the exports from the core module to each runtime module.\nSimply include the runtime module to gain all functionality available to\nthat runtime."
